# Financial-Report-Research-Copilot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  frontend.py  normalize_edges.py  pyproject.toml  requirements-frontend.txt  start.ps1
.github/workflows/: ci.yml
data/: eval_results_baseline.json  eval_results_t3_baseline.json  eval_results_t3_graph.json  eval_results_v2.json  eval_results_v3.json  eval_set.json  eval_set_sc.json  eval_set_tier3.json  sc_results_A.json  sc_results_B.json  sc_results_C.json  supply_edges_current.csv  wrds_comparison.csv  wrds_segsales.csv
scripts/: explore_edgar.py
src/copilot/: api.py  config.py
src/copilot/agent/: agent.py  tools.py
src/copilot/eval/: build_sc_eval.py  generate_dataset.py  harness.py  harness_sc.py  harness_tier3.py
src/copilot/pipeline/: companies.py  embed_chunks.py  extract_edges.py  ingest_text.py  ingest_xbrl.py
src/copilot/retrieval/: bm25.py  dense.py  hybrid.py
src/copilot/storage/: db.py  schema.py
tests/: conftest.py  test_api.py  test_compute.py  test_smoke.py
